# echolake

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: COLLECTION_ENVIRONMENT.md  DATASET_FORMAT.md  DRY_RUN_MODE.md  ECHO_PROFILES.md  FEATURES.md  LOG_SOURCE_METADATA.md  QUICKSTART.md  TIMESTAMP_MANIPULATION.md  TIME_EXPRESSIONS.md
examples/: README.md  basic-echo.yaml  lakehouse-example.yaml  ocsf-example.yaml
examples/credentials/: credentials.yaml.template
examples/datasets/: README.md
examples/datasets/aws-cloudtrail-example/: dataset.yaml
examples/datasets/multi-source-attack/: dataset.yaml
examples/datasets/sysmon-example/: dataset.yaml
examples/destinations/: azure-archive.yaml  chronicle-prod.yaml  gcs-archive.yaml  local-output.yaml  s3-archive.yaml  stdout-debug.yaml
examples/profiles/: README.md  cloud-breach-aws.yaml  daily-baseline-traffic.yaml  getting-started.yaml  insider-threat-slow.yaml  multi-speed-attack.yaml  ransomware-incident.yaml  weekly-apt-simulation.yaml
src/echolake/: __init__.py
src/echolake/cli/: __init__.py  main.py  visualization.py
src/echolake/core/: change_map.py  config.py  echo.py  interrupt_handler.py  memory_guard.py  raw_timestamp_shifter.py  timestamp.py
src/echolake/databricks/: __init__.py
src/echolake/datasets/: __init__.py  cache.py  github.py  loader.py  models.py  registry.py  resolver.py  utils.py
src/echolake/inputs/: __init__.py  base.py  timestamp_registry.py  timestamp_registry.yaml
src/echolake/inputs/formats/: __init__.py  auto.py  csv.py  json.py  text.py  xml.py
src/echolake/inputs/schemas/: __init__.py  lakehouse.py  (+2 more)
src/echolake/models/: event.py
src/echolake/outputs/: __init__.py  base.py
src/echolake/profiles/: __init__.py  discovery.py  executor.py  models.py
src/echolake/utils/: __init__.py  time.py
tests/: __init__.py  conftest.py  test_compression.py  test_config.py  test_datasets_github.py  test_datasets_integration.py  test_datasets_models.py  test_datasets_registry.py  test_datasets_resolver.py  test_datasets_utils.py  test_event.py  test_local_destination.py  test_no_shift.py  test_profile_discovery.py  test_profiles_models.py  test_raw_timestamp_shifter.py  test_splunk_hec_destination.py  test_stdout_destination.py  test_time_expressions.py  test_timestamp.py  test_visualization.py
tests/fixtures/sample-dataset/: dataset.yaml
tests/fixtures/sample-dataset-nodeps/: dataset.yaml
(+18 files in other folders)
