[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echolake"
version = "0.1.0"
description = "Security data echo tool for SIEMs and data lakes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "EchoLake Contributors" }
]
keywords = ["security", "siem", "echo", "ocsf", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28.0"]
gcs = ["google-cloud-storage>=2.10.0"]
azure = ["azure-storage-blob>=12.19.0"]
cloud = [
    "boto3>=1.28.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.19.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
echolake = "echolake.cli.main:main"

[project.urls]
Homepage = "https://github.com/daveherrald/echolake"
Documentation = "https://github.com/daveherrald/echolake#readme"
Repository = "https://github.com/daveherrald/echolake"
Issues = "https://github.com/daveherrald/echolake/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/echolake"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
